fix contrast issue with nav and new home page 📃

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,14 +1,16 @@
 header#navbar-header {
   width: 100%;
+  height: 6%;
   position: fixed;
   padding: 0 10px;
   z-index: 1;
   display: flex;
   align-items: center;
+  background-color: rgba(255, 255, 255, 0.24);
 }
 
 #navbar-header a {
-  color: black;
+  color: rgb(0, 0, 0);
 }
 
 a {
@@ -29,8 +31,9 @@ a {
 
 @media only screen and (max-width: 510px) {
   header#navbar-header {
-    padding-top: 1.5vh;
+    padding-top: 1.6vh;
     flex-direction: column;
+    height: 12%;
   }
   ul.nav__links {
     padding: 0;
@@ -44,6 +47,6 @@ a {
   }
 
   .nav__links li {
-    padding: 5px;
+    padding: 1.5px;
   }
 }
