--- a/src/components/SunAndMoon/SunAndMoon.css
+++ b/src/components/SunAndMoon/SunAndMoon.css
@@ -1,3 +1,8 @@
 .SunAndMoon {
-  background-color: lemonchiffon;
+  background-color: #000000;
 }
+
+/* #navbar-header a {
+  color: rgb(255, 255, 255);
+  mix-blend-mode: difference
+} */
